migration-test/03-ingresses/demo-app-admin-panel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-panel
  namespace: demo-app
  annotations:
    # Switched to Traefik
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: demo-app-admin-panel-ip-allowlist@kubernetescrd,demo-app-admin-panel-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: admin-tls
      hosts:
        - admin.example.com
  rules:
    - host: admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-panel
                port:
                  number: 80
