migration-test/03-ingresses/demo-app-grpc-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-service
  namespace: demo-app
  annotations:
    # Switched to Traefik
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: demo-app-grpc-service-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: grpc-tls
      hosts:
        - grpc.example.com
  rules:
    - host: grpc.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 80
