migration-test/03-ingresses/demo-app-main-website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-website
  namespace: demo-app
  annotations:
    # Switched to Traefik
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: demo-app-main-website-rate-limit@kubernetescrd,demo-app-main-website-cors@kubernetescrd,demo-app-main-website-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: example-tls
      hosts:
        - example.com
        - www.example.com
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 80
    - host: www.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 80
